# nrf24-tools

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gpio.c  gpio.h  msg.proto  nrf24_mosquitto_test.c  nrf24_test.c  serial_mosquitto_test.c  spi.c  spi.h
cmake/Modules/: FindProtobufC.cmake
common/: config.c  gpio-sysfs.c  gpio.c  spi-spidev.c  spi.c
conf/: beaglebone-black.cfg  example.cfg  orange-pi-one.cfg  orange-pi-pc.cfg  orange-pi-zero-plus2.cfg  orange-pi-zero.cfg  pcduino-legacy.cfg  pcduino-upstream.cfg  um232.cfg
drv/bone/: bone-nrf24.c
drv/orange-pi-one/: orange-nrf24.c
drv/orange-pi-zero/: orange-nrf24.c
drv/pcduino/: pcduino-nrf24.c
drv/pcduino-legacy/: pcduino-nrf24.c
drv/pcduino-upstream/: pcduino-nrf24.c
drv/sbc/: sbc-fixups.c  sbc-nrf24.c
drv/spidev/: pcduino-gpio.c  pcduino-nrf24.c  pcduino-spi.c
drv/um232h/: um232h-nrf24.c  um232h.c
include/: config.h  drv.h  gpio.h  pcduino-gpio.h  pcduino-spi.h  spi.h
scripts/: data_plotter.py  mqtt_mock_sensor.py  mqtt_plotter.py
src/: nrf24_dump_regs.c  nrf24_mosquitto_pub.c  nrf24_mosquitto_test.c  nrf24_test_hub.c  nrf24_test_prx.c  nrf24_test_ptx.c  serial_mosquitto_test.c
test/: Makefile  conf_tests.cpp  test_conf.c
